--- a/view/cardUp.html
+++ b/view/cardUp.html
@@ -8,7 +8,8 @@
   <meta content="telephone=no,email=no" name="format-detection">
   <script src="../js/flexible/flexible.js"></script>
   <title>身份验证</title>
-  <!-- 引入样式 -->
+   <!-- 引入样式 -->
+    <link rel="stylesheet" href="../js/mint-ui/lib/style.css">
   <link rel="stylesheet" href="../css/login.css">
   <style>
     /* 顶部样式 */
@@ -50,7 +51,7 @@
     <a href=""><img src="../img/icon-back.png" alt=""></a>
     <h1>身份验证</h1>
   </header>
-  <article class="main">
+  <article class="main" id="app">
     <section class="top-content">
       <span>拍摄您的第二代身份证原件,请确保图片清晰,四角完整</span>
     </section>
@@ -61,62 +62,116 @@
         <input id="img1" type="file" accept="image/*" capture="camera">
       </div>
       <div class="pic-group">
-          <p>身份证背面</p>
-          <img id="pic2" src="../img/idcard-back.png" alt="" onclick="upLoad('img2')">
-          <input id="img2" type="file" accept="image/*" capture="camera">
-        </div>
+        <p>身份证背面</p>
+        <img id="pic2" src="../img/idcard-back.png" alt="" onclick="upLoad('img2')">
+        <input id="img2" type="file" accept="image/*" capture="camera">
+      </div>
     </section>
     <section class="btn-content">
-        <a href="./signWait.html" class="btn btn-danger">下一步</a>
+      <button class="btn btn-danger" @click="submit">下一步</button>
     </section>
   </article>
   <footer>
   </footer>
 </body>
-<script src="../js/common.js"></script>
+<script src="../js/axios/dist/axios.min.js"></script>
+<script src="../js/config/config.js"></script>
+<script src="../js/vue/vue-2.5.17.js"></script>
+<!-- 引入组件库 -->
+<script src="../js/mint-ui/lib/index.js"></script>
+ <!-- 放在mint组件库后面 -->
+ <script src="../js/common.js"></script>
 <script>
-  window.onload=function(){
-    bindImgChange('img1',function(e){
-      
+  window.onload = function () {
+    bindImgChange('img1', function (e) {
+
       document.getElementById('pic1').src = e
-      var imgs = e.slice(e.indexOf('base64,')+7)
+      var imgs = e.slice(e.indexOf('base64,') + 7)
       // 下面逻辑处理
-      upCard(imgs,'front')
     })
-    bindImgChange('img2',function(e){
+    bindImgChange('img2', function (e) {
       document.getElementById('pic2').src = e
-      var imgs = e.slice(e.indexOf('base64,')+7)
+      var imgs = e.slice(e.indexOf('base64,') + 7)
       // 下面逻辑处理
-      upCard(imgs,'back')
     })
   }
-// function bindImgChange (tag,param,type) {
-//   document.getElementById('img'+tag).addEventListener('change', function(e) {
-//     var file = e.target.files[0];
-//   var reader = new FileReader();
-//   reader.readAsDataURL(file); // 读出 base64
-//   reader.onloadend = function () {
-//       // 图片的 base64 格式, 可以直接当成 img 的 src 属性值        
-//       var dataURL = reader.result;
-//       var imgs = dataURL.slice(dataURL.indexOf('base64,')+7)
-//       // 下面逻辑处理
-//       document.getElementById('pic'+tag).src = dataURL
-//       // upCard(imgs,type)
-//   };
-//   })
-// }
-// 图片上传事件
-function upCard(img,type) {
-  var data = {
-        'detect_direction': 'true',
-        'image': img,
-        'id_card_side': type,
-        'detect_risk': 'false'
+  var vm = new Vue({
+    el: '#app',
+    data() {
+      return {
+        phone: '',
+        imgfront: '',
+        imgback: ''
+      }
+    },
+    mounted() {
+      var _this = this
+      _this.phone = window.sessionStorage.getItem('tel')
+      bindImgChange('img1', function (e) {
+
+        document.getElementById('pic1').src = e
+        var imgs = e.slice(e.indexOf('base64,') + 7)
+        // 下面逻辑处理
+      })
+      bindImgChange('img2', function (e) {
+        document.getElementById('pic2').src = e
+        var imgs = e.slice(e.indexOf('base64,') + 7)
+        // 下面逻辑处理
+      })
+    },
+    methods: {
+      submit: submit
     }
-    axios.post('https://aip.baidubce.com/rest/2.0/ocr/v1/idcard?access_token=24.dd0eadfa426d925ed074f7b394cf8b1d.2592000.1544606864.282335-14774800',Qs.stringify(data)).then(res=>{
-          console.log(res)
-          // 其他逻辑
-        })
-}
+  })
+  // function bindImgChange (tag,param,type) {
+  //   document.getElementById('img'+tag).addEventListener('change', function(e) {
+  //     var file = e.target.files[0];
+  //   var reader = new FileReader();
+  //   reader.readAsDataURL(file); // 读出 base64
+  //   reader.onloadend = function () {
+  //       // 图片的 base64 格式, 可以直接当成 img 的 src 属性值        
+  //       var dataURL = reader.result;
+  //       var imgs = dataURL.slice(dataURL.indexOf('base64,')+7)
+  //       // 下面逻辑处理
+  //       document.getElementById('pic'+tag).src = dataURL
+  //       // upCard(imgs,type)
+  //   };
+  //   })
+  // }
+  function submit() {
+    var _this = this
+        formData = new FormData(),
+        imgFront = document.getElementById('img1').files[0],
+        imgBack = document.getElementById('img2').files[0]
+    if(!imgFront){
+      _this.$toast('请上传身份证正面照')
+      return
+    }
+    if(!imgBack){
+      _this.$toast('请上传身份证背面照')
+      return
+    }
+    formData.append("tel", this.phone);
+    formData.append("idcfront", imgFront);
+    formData.append("idcback",imgBack);
+    upCard.call(_this,formData)
+  }
+  // 图片上传事件
+  function upCard(data) {
+    var url = window.webConfig.apiUrl + '/api/userauth/postidcard'
+    request.post(url,data,vm).then(res => {
+      var jsonRet = JSON.parse(res.data)
+      if (jsonRet.ReturnCode  === 'SUCCESS') {
+        // 跳转页面
+        window.location.href = './signWait.html'
+      }else {
+        this.$toast(getCodeToMsg(jsonRet.ReturnCode))
+      }
+      // 其他逻辑
+    }).catch(err=>{
+      this.$toast('系统错误！')
+    })
+  }
 </script>
+
 </html>
