--- a/view/email.html
+++ b/view/email.html
@@ -9,6 +9,7 @@
   <script src="../js/flexible/flexible.js"></script>
   <title>填写邮箱</title>
   <!-- 引入样式 -->
+   <link rel="stylesheet" href="../js/mint-ui/lib/style.css">
   <link rel="stylesheet" href="../css/login.css">
   <style>
     .ipt-group.email img{
@@ -20,30 +21,75 @@
 
 <body>
   <header>
-      <a href=""><img src="../img/icon-back.png" alt=""></a>
-      <h1>填写邮箱</h1>
+    <a href=""><img src="../img/icon-back.png" alt=""></a>
+    <h1>填写邮箱</h1>
   </header>
-  <article class="main">
+  <article class="main" id="app">
     <section class="logo">
       <img src="../img/logo@3x.png" alt="">
     </section>
     <section class="ipt-content">
       <div class="ipt-group line-bottom">
         <img src="../img/icon-phone.png" alt="" srcset="">
-        <input type="text" class="ipt-phone" placeholder="请填写手机号码">
+        <span>{{phone}}</span>
       </div>
       <div class="ipt-group line-bottom email">
-          <img src="../img/icon-email.png" alt="" srcset="">
-          <input type="text" class="ipt-viste" placeholder="请输入您的邮箱">
+        <img src="../img/icon-email.png" alt="" srcset="">
+        <input type="text" class="ipt-viste" placeholder="请输入您的邮箱" v-model="email">
       </div>
     </section>
     <section class="btn-content">
-      <a href="./cardUp.html" class="btn btn-danger">下一步</a>
+      <button class="btn btn-danger" @click="submit">下一步</button>
     </section>
   </article>
   <footer>
     <span>本服务由亿签网技术支持</span>
   </footer>
 </body>
+<script src="../js/axios/dist/axios.min.js"></script>
+<script src="../js/config/config.js"></script>
+<script src="../js/vue/vue-2.5.17.js"></script>
+<!-- 引入组件库 -->
+<script src="../js/mint-ui/lib/index.js"></script>
+<!-- 放在mint组件库后面 -->
+<script src="../js/common.js"></script>
+<script>
+  new Vue({
+    el: '#app',
+    data() {
+      return {
+        phone: '',
+        email: ''
+      }
+    },
+    mounted() {
+      this.phone = window.sessionStorage.getItem('tel')
+    },
+    methods: {
+      submit: submit
+    }
+  })
+
+  function submit() {
+    var _this = this,
+      phone = _this.phone,
+      email = _this.email,
+      url = window.webConfig.apiUrl + '/api/userauth/bindmail?id=' + phone + '&mail=' + email,
+      reg = /^[a-zA-Z0-9_.-\/]+@[a-zA-Z0-9-]+(\.[a-zA-Z0-9-]+)*\.[a-zA-Z0-9]{2,6}$/
+    if (!reg.test(email)) {
+      _this.$toast('请输入正确的邮箱')
+      return
+    }
+    request.get(url, _this).then(function (res) {
+      var jsonRet = JSON.parse(res.data)
+      if (jsonRet.ReturnCode === 'SUCCESS') {
+        // 跳转页面
+        window.location.href = './cardUp.html'
+      } else {
+        _this.$toast(getCodeToMsg(jsonRet.ReturnCode))
+      }
+    })
+  }
+</script>
 
 </html>
