--- a/view/login.html
+++ b/view/login.html
@@ -9,6 +9,8 @@
   <script src="../js/flexible/flexible.js"></script>
   <title>登录页</title>
   <!-- 引入样式 -->
+  <!--  <link rel="stylesheet" href="../js/mint-ui/lib/style.css"> -->
+  <link rel="stylesheet" href="../js/mint-ui/lib/style.css">
   <link rel="stylesheet" href="../css/login.css">
 </head>
 
@@ -16,7 +18,7 @@
   <header>
 
   </header>
-  <article class="main">
+  <article class="main" id="app">
     <section class="logo">
       <img src="../img/logo@3x.png" alt="">
     </section>
@@ -24,7 +26,7 @@
       <div class="ipt-group line-bottom">
         <img src="../img/icon-phone.png" alt="" srcset="">
         <input id="phone" type="text" class="ipt-phone" placeholder="请填写手机号码">
-        <button onclick="send()">获取验证码</button>
+        <button @click="send">获取验证码</button>
       </div>
       <div class="ipt-group line-bottom">
           <img src="../img/icon-viste.png" alt="" srcset="">
@@ -33,7 +35,7 @@
       <div class="ipt-group viste-call"><img src="../img/icon-w.png" alt="" srcset=""><span>收不到短信，试试<a href="">语音验证码</a></span></div>
     </section>
     <section class="btn-content">
-      <button class="btn btn-danger" onclick="submit()">提交验证</button>
+      <button class="btn btn-danger" @click="submit">提交验证</button>
     </section>
   </article>
   <footer>
@@ -41,20 +43,87 @@
   </footer>
   <script src="../js/axios/dist/axios.min.js"></script>
   <script src="../js/config/config.js"></script>
+  <script src="../js/vue/vue-2.5.17.js"></script>
+  <!-- 引入组件库 -->
+  <!-- <script src="../js/mint-ui/lib/index.js"></script> -->
+  <script src="../js/mint-ui/lib/index.js"></script>
+  <!-- 放在mint组件库后面 -->
+<script src="../js/common.js"></script>
   <script>
+    var timeClock = null
+    var vm = new Vue({
+      el: '#app',
+      methods: {
+        submit: submit,
+        send:send
+      }
+    })
     function send(){
-      var phone = document.getElementById('phone').value,
-          url = window.webConfig.apiUrl + '/api/userauth/askcode?id='+phone
-      axios.get(url).then(function(res){
-        console.log(res)
-      })
+      var reg = /^(13[0-9]|14[579]|15[0-3,5-9]|16[6]|17[0135678]|18[0-9]|19[89])\d{8}$/
+      if(!reg.test(document.getElementById('phone').value)){
+        vm.$toast('手机号码格式错误')
+        return 
+      }
+      if(timeClock){
+        return
+      }
+      var _this=this
+          phone = document.getElementById('phone').value,
+          url = window.webConfig.apiUrl + '/api/userauth/askcode?id='+phone,
+          el = event.target,
+          time = 60
+          request.get(url,_this).then(function(res){
+            console.log(res)
+            if(res.data!=='SUCCESS'){
+              _this.$toast(getCodeToMsg(res.data))
+            }else{
+              _this.$toast('发送成功!')
+              // 定时器
+              timeClock = setInterval(function(){
+                time--
+                if(time>0){
+                  el.innerHTML=`${time}秒`
+                }else{
+                  clearInterval(timeClock)
+                  timeClock=null
+                  el.disabled=false
+                  el.innerHTML='发送验证码'
+                }
+              },1000)
+            }
+          }).catch(function(err){
+            _this.$toast('错误:'+err)
+          })
     }
     function submit(){
-      var phone = document.getElementById('phone').value,
+      var _this = this
+          phone = document.getElementById('phone').value,
           code = document.getElementById('code').value,
-          url = window.webConfig.apiUrl + '/api/userauth/askcode?id='+phone+'&code='+code
-          axios.get(url).then(function(res){
-            console.log(res)
+          url = window.webConfig.apiUrl + '/api/userauth/authlogin?id='+phone+'&code='+code,
+          reg = /^(13[0-9]|14[579]|15[0-3,5-9]|16[6]|17[0135678]|18[0-9]|19[89])\d{8}$/
+          if(!reg.test(document.getElementById('phone').value)){
+            _this.$toast('手机号码格式错误')
+            return 
+          }
+          if(code===''){
+            _this.$toast('请输入验证码')
+            return 
+          }
+          request.get(url,_this).then(function(res){
+            if(res.data==='SUCCESS'){
+              // 登录成功
+              window.sessionStorage.setItem('tel',phone)
+              // 跳转页面
+              window.location.href='./signWait.html'
+            }else if(res.data==='UNAUTHENTICATED'){
+              // 未实名认证
+              window.sessionStorage.setItem('tel',phone)
+              window.location.href='./email.html'
+            }else{
+              _this.$toast(getCodeToMsg(res.data))              
+            }
+          }).catch(err=>{
+            console.log(err)
           })
     }
   </script>
