--- a/view/signWait.html
+++ b/view/signWait.html
@@ -10,78 +10,91 @@
   <!-- less -->
   <link rel="stylesheet/less" href="../css/style.less">
   <script src="../js/less/less.min.js"></script>
-  <title>填写邮箱</title>
+  <title>合同列表</title>
   <!-- 引入样式 -->
-
+   <link rel="stylesheet" href="../js/mint-ui/lib/style.css">
   <link rel="stylesheet" href="../css/login.css">
 </head>
 
 <body>
   <header>
-      <!-- <a href=""><img src="../img/icon-back.png" alt=""></a> -->
-      <h1>待签合同</h1>
+    <!-- <a href=""><img src="../img/icon-back.png" alt=""></a> -->
+    <h1>待签合同</h1>
   </header>
-  <article class="main bg-f7" id="main">
+  <article class="main bg-f7" id="app">
     <section class="list-content">
-        <input id="img1" type="file" accept="image/*" capture="camera">
       <ul>
-        <li v-for="item in list" class="list-item flex-box flex-space-between flex-aligin-center" onclick="upLoad('img1')">
-            <span>{{item.DocName}}</span><img src="../img/icon-right@3x.png" alt="">
+        <li v-for="item in list" class="list-item flex-box flex-space-between flex-aligin-center" @click="showContract(item.cid)">
+          <span>{{item.DocName}}</span><img src="../img/icon-right@3x.png" alt="">
         </li>
       </ul>
     </section>
   </article>
   <footer class="fixed">
     <ul>
-        <li class="active">
-            <a href="./signWait.html">
-              <i class="sign-wait" alt=""></i>
-              <span>待签合同</span>
-            </a>
-          </li>
-          <li>
-            <a href="./signFinish.html">
-              <i class="sign-finish" alt=""></i>
-              <span>已签合同</span>
-            </a>
-          </li>
-          <li>
-            <a href="./personInfo.html">
-              <i class="sign-person" alt=""></i>
-              <span>个人中心</span>
-            </a>
-          </li>
+      <li class="active">
+        <a href="./signWait.html">
+          <i class="sign-wait" alt=""></i>
+          <span>待签合同</span>
+        </a>
+      </li>
+      <li>
+        <a href="./signFinish.html">
+          <i class="sign-finish" alt=""></i>
+          <span>已签合同</span>
+        </a>
+      </li>
+      <li>
+        <a href="./personInfo.html">
+          <i class="sign-person" alt=""></i>
+          <span>个人中心</span>
+        </a>
+      </li>
     </ul>
   </footer>
   <!-- 引入js -->
-  <script src="../js/common.js"></script>
   <script src="../js/axios/dist/axios.min.js"></script>
+  <script src="../js/config/config.js"></script>
   <script src="../js/vue/vue-2.5.17.js"></script>
+  <!-- 引入组件库 -->
+  <script src="../js/mint-ui/lib/index.js"></script>
+  <!-- 放在mint组件库后面 -->
+<script src="../js/common.js"></script>
   <script>
-    window.onload=function(){
-      bindImgChange('img1',function(e){
-        window.location.href='./contract.html'
-      })
-    }
     var vm = new Vue({
-      el: '#main',
+      el: '#app',
       data: {
-        list:[{
-            "sid":"eaa74a59-7f35-45b9-aa90-a8a100fa8d22",
-            "cid":"67fe8939-118b-494a-b39a-a8a100fa78cb",
-            "DocName":"客户询证函4971110D0118060014",
-            "PartA":"huang",
-            "PartB":"huang",
-            "UpdateDT":"2018-03-12T15:12:13.733",
-            "Status":"待签"
+        phone: '',
+        list: [{
+          "sid": "eaa74a59-7f35-45b9-aa90-a8a100fa8d22",
+          "cid": "7AF3592B-227E-4F71-AE30-A83400F1D0E7",
+          "DocName": "客户询证函4971110D0118060014",
+          "PartA": "huang",
+          "PartB": "huang",
+          "UpdateDT": "2018-03-12T15:12:13.733",
+          "Status": "待签"
         }]
       },
-      methods:{
-        handleClick:handleClick
+      mounted() {
+        var _this = this
+          _this.phone = window.sessionStorage.getItem('tel')
+        var url = window.webConfig.apiUrl + '/api/SignOper/getlist?id=' + _this.phone + '&status=0'
+        request.get(url,_this).then(function (res) {
+          var jsonRet = JSON.parse(res.data)
+          if (jsonRet.ReturnCode === 'SUCCESS') {
+            _this.list = JSON.parse(jsonRet.JsonDesc)
+          } else {
+            _this.$toast(getCodeToMsg(jsonRet.ReturnCode))
+          }
+        })
+      },
+      methods: {
+        showContract: showContract
       }
     })
-    function handleClick(val){
 
+    function showContract(val) {
+      window.location.href='./contract.html?cid='+val
     }
   </script>
 </body>
